<resources>
    <string name="app_name">Vimee</string>

    <!-- Auth -->
    <string name="sign_in">Войти</string>
    <string name="create_account">Зарегистрироваться</string>
    <string name="sign_out">Выйти</string>
    <string name="verify_email">Подтвердить email</string>
    <string name="disconnect">Разъединение</string>
    <string name="loading">Загрузка…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Вошел</string>
    <string name="signed_out">Вы вышли из системы</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="desc_videochat_lockup">VideoChat logo and name</string>
    <string name="auth_failed">Неправильный логин или пароль</string>
    <string name="register_failed">Возможно такой пользователь уже существует</string>
    <string name="status_sign_in_failed">Ошибка входа</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="emailpassword_status_fmt">
        Ваш Email: %1$s\n%2$s\n </string>
    <string name="firebase_status_fmt">Идентификатор пользователя: %s</string>
    <string name="emailpassword_title_text">Вход в систему</string>
    <string name="reload">Обновить</string>
    <string name="desc_send_email">Письмо с подтверждением отправлено на адрес </string>
    <string name="send_email_failed">Не удалось отправить письмо с подтверждением.</string>
    <string name="required">Введите ваш действующий email</string>
    <string name="required_password">Пароль должен содержать не менее 6 символов</string>

    <!-- Main -->
    <string name="category">Категории</string>
    <string name="setting">Настройки</string>
    <string name="profile">Профиль</string>
    <string name="filter_text">Настроить фильтр</string>

    <!-- Video -->
    <string name="search_chat">Поиск собеседника</string>
    <string name="exit">Выход</string>
    <string name="next">Дальше</string>
    <string name="select_category">Категория %s</string>
    <string name="fail_connect_ethe">Проверьте подключение к Интернету</string>
    <string name="age_17">до 17</string>
    <string name="age_18_21">от 18 до 21</string>
    <string name="age_22_25">от 22 до 25</string>
    <string name="age_26_30">от 26 до 30</string>
    <string name="age_31">старше 31</string>
    <string name="other_links">Другие соц. сети:</string>
    <!--  Profile -->
    <string name="done">OK</string>
    <string name="cancel">Отмена</string>
    <string name="set_title_link">Ссылка на ваш контакт</string>

</resources>