<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_search_user"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/emailCreateAccountButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/blue_main"
        android:theme="@style/TextView"
        android:visibility="gone"
        app:backgroundTint="@color/white"
        app:cornerRadius="@dimen/field_radius"
        app:strokeColor="@color/blue_main"
        app:strokeWidth="@dimen/stroke_width" />

    <Button
        android:id="@+id/emailSignInButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:theme="@style/TextView"
        android:visibility="gone"
        app:backgroundTint="@color/blue_main"
        app:cornerRadius="@dimen/field_radius"
        app:strokeColor="@color/blue_main"
        app:strokeWidth="@dimen/stroke_width" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/status"
                style="@style/AllTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/signed_out"
                android:textSize="@dimen/size_text_sub_main"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@style/AllTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hint_email" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="@dimen/field_radius"
                app:boxCornerRadiusBottomStart="@dimen/field_radius"
                app:boxCornerRadiusTopEnd="@dimen/field_radius"
                app:boxCornerRadiusTopStart="@dimen/field_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/AllTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/title_bottom_margin"
                android:text="@string/hint_password" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="@dimen/field_radius"
                app:boxCornerRadiusBottomStart="@dimen/field_radius"
                app:boxCornerRadiusTopEnd="@dimen/field_radius"
                app:boxCornerRadiusTopStart="@dimen/field_radius"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailPasswordFields"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/emailSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginTop="@dimen/title_bottom_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:theme="@style/TextView"
                app:backgroundTint="@color/blue_main"
                app:cornerRadius="@dimen/field_radius"
                app:strokeColor="@color/blue_main"
                app:strokeWidth="@dimen/stroke_width" />

            <Button
                android:id="@+id/emailCreateAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_marginTop="@dimen/title_bottom_margin"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/blue_main"
                android:theme="@style/TextView"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/field_radius"
                app:strokeColor="@color/blue_main"
                app:strokeWidth="@dimen/stroke_width" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailPasswordFields"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/signOutButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/sign_out"
                    android:textAllCaps="false"
                    android:theme="@style/TextView"
                    app:backgroundTint="@color/blue_main"
                    app:cornerRadius="@dimen/field_radius"
                    app:strokeColor="@color/blue_main"
                    app:strokeWidth="@dimen/stroke_width" />

                <Button
                    android:id="@+id/reloadButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_horizontal_margin"
                    android:layout_marginEnd="@dimen/button_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/reload"
                    android:textAllCaps="false"
                    android:theme="@style/TextView"
                    app:backgroundTint="@color/blue_main"
                    app:cornerRadius="@dimen/field_radius"
                    app:strokeColor="@color/blue_main"
                    app:strokeWidth="@dimen/stroke_width" />
            </LinearLayout>

            <Button
                android:id="@+id/verifyEmailButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/button_horizontal_margin"
                android:layout_marginEnd="@dimen/button_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/verify_email"
                android:textAllCaps="false"
                android:theme="@style/TextView"
                app:backgroundTint="@color/blue_main"
                app:cornerRadius="@dimen/field_radius"
                app:strokeColor="@color/blue_main"
                app:strokeWidth="@dimen/stroke_width" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>